--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 body {
-    background-color: blue; /* Cambia el fondo a azul */
-    color: white; /* Cambia el color del texto a blanco */
-    font-size: 20px; /* Cambia el tamaño de la fuente */
+   background: linear-gradient(#94D9D9, #22C7C9);
+   height: 100vh;
 }
